.metadata/.plugins/org.eclipse.cdt.ui/Lab4.build.log
22:46:59 **** Incremental Build of configuration Debug for project Lab4 ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/scheduler.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103x6 -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/scheduler.d" -MT"Core/Src/scheduler.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/scheduler.o"
../Core/Src/scheduler.c:59:30: error: unknown type name 'tByte'
   59 | void SCH_Delete_Task ( const tByte TASK_INDEX) {
      |                              ^~~~~
make: *** [Core/Src/subdir.mk:37: Core/Src/scheduler.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

22:46:59 Build Failed. 2 errors, 0 warnings. (took 380ms)

